SD-2150: Remove old sada billing account (#29)
* SD-2150: Remove old sada billing account

* SD-2150: Create plan if a module is changed

* SD-2150: Fix module absolute path

* SD-2150: Remove unused tfdocs

* SD-2150: Rework vpc factory to map live values

* SD-2150: Fix chekov

* SD-2150: Fix chekov

--- a/.atlantis/project.tmpl
+++ b/.atlantis/project.tmpl
@@ -2,6 +2,6 @@
   dir: ${PROJECT}
   workspace: ${WORKSPACE}
   autoplan:
-    when_modified: [\"*.tf*\"]
+    when_modified: [\"${MODULES}\", \"*.tf*\"]
     enabled: true
   workflow: formlabs-gcp
